--- a/environment.yml
+++ b/environment.yml
@@ -1,95 +1,14 @@
-name: hjerterehab
+name: ehjerterehab_crew_env
 channels:
   - conda-forge
-  - defaults
-  - pytorch
 dependencies:
-  # Python version
-  - python=3.10
-  
-  # Core scientific computing
-  - numpy>=1.24,<1.26
-  - pandas>=2.0,<2.2
-  - scipy>=1.10,<1.12
-  - scikit-learn>=1.3,<1.4
-  
-  # Data visualization
-  - matplotlib>=3.7,<3.9
-  - seaborn>=0.12,<0.14
-  - plotly>=5.15,<5.18
-  
-  # Jupyter ecosystem
-  - jupyter>=1.0
-  - jupyterlab>=4.0,<4.1
-  - notebook>=6.5,<7.0
-  - ipywidgets>=8.0,<8.2
-  
-  # Machine Learning and AI (PyTorch from conda)
-  - pytorch>=2.0,<2.2
-  - torchvision>=0.15,<0.17
-  - torchaudio>=2.0,<2.2
-  - transformers>=4.30,<4.36
-  
-  # Web and HTTP
-  - requests>=2.31,<2.33
-  - urllib3>=2.0,<2.2
-  
-  # Date/time handling
-  - python-dateutil>=2.8,<2.9
-  
-  # Development and utilities
-  - tqdm>=4.65,<4.67
-  - pyyaml>=6.0,<6.1
-  - jsonschema>=4.18,<4.20
-  
-  # Statistical analysis
-  - statsmodels>=0.14,<0.15
-  
-  # Network analysis
-  - networkx>=3.1,<3.3
-  
-  # Additional data science tools
-  - openpyxl>=3.1,<3.2
-  - xlrd>=2.0,<2.1
-  
-  # Pip dependencies (packages not available through conda or need specific versions)
-  - pip>=23.1
+  - python=3.12
+  - pip
   - pip:
-    # CrewAI and LangChain ecosystem (latest compatible versions)
-    - crewai>=0.28.0
-    - langchain>=0.1.0
-    - langchain-community>=0.0.20
-    - langchain-core>=0.1.0
-    - langchain-openai>=0.1.0
-    
-    # OpenAI integration
-    - openai>=1.0.0
-    
-    # PyTorch Geometric ecosystem (installed via pip for M1 Mac compatibility)
-    - torch-geometric>=2.3.0
-    - torch-scatter>=2.1.0
-    - torch-sparse>=0.6.0
-    - torch-cluster>=1.6.0
-    - torch-spline-conv>=1.2.0
-    
-    # Text processing
-    - nltk>=3.8
-    - spacy>=3.6,<3.8
-    
-    # Health data specific (optional, may need adjustment based on availability)
-    - fhir.resources>=7.0.0
-    
-    # Time series analysis
-    - tslearn>=0.6.0
-    - sktime>=0.20.0
-    
-    # Additional visualization
-    - wordcloud>=1.9.0
-    
-    # Additional utilities
-    - python-dotenv>=1.0.0
-    - rich>=13.0.0
-    - typer>=0.9.0
-    
-    # For handling missing dependencies gracefully
-    - packaging>=23.0
+    - crewai
+    - crewai-tools
+    - python-dotenv
+    - langchain-google-genai
+    - jupyter
+
+# conda env create -f environment.yml --name ehjerterehab_crew_env
